# newbee-mall-api-rs

./: .env.exmaple  .gitignore  Cargo.toml  Dockerfile  README-zh_CN.md  README.md
migrations/2023-01-13-103514_init/: down.sql  up.sql
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/admin/: admin_user.rs  carousel.rs  carousels.rs  categories.rs  goods.rs  mod.rs  upload.rs  users.rs
src/app/mall/: address.rs  categories.rs  goods.rs  index.rs  mod.rs  order.rs  shop_cart.rs  shopping_cart.rs  user.rs  user_address.rs
src/bootstrap/: app.rs  database.rs  error.rs  mod.rs  response.rs
src/config/: app.rs  database.rs  mod.rs
src/middleware/: authentication.rs
src/models/: admin_user.rs  admin_user_token.rs  carousel.rs  goods.rs  goods_category.rs  index_config.rs  mod.rs  order.rs  order_address.rs  order_item.rs  pagination.rs  schema.rs  shopping_cart.rs  user.rs  user_address.rs  user_token.rs
src/routes/: admin.rs  mall.rs
src/services/: admin_user.rs  carousel.rs  goods.rs  goods_category.rs  index.rs  mod.rs  order.rs  shopping_cart.rs  user.rs  user_address.rs
src/utils/: mod.rs  number.rs  token.rs
