[package]
name = "newbee-mall-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0", features = ["mysql", "serde_json", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
envy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
env_logger = "0.9"
log = "0.4"
rust-crypto = "0.2"
r2d2 = "0.8"
rand = "0.8"
actix-cors = "0.6"
futures-util = "0.3"
itertools = "0.10.5"
actix-multipart = "0.5"
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
actix-files = "0.6"