[package]
name = "newbee-mall-api-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1", features = ["mysql", "serde_json", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
envy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
r2d2 = "0.8"
rand = "0.8"
actix-cors = "0.7"
futures-util = "0.3"
itertools = "0.12"
actix-multipart = "0.6"
sanitize-filename = "0.5"
uuid = { version = "1", features = ["v4"] }
actix-files = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"
md-5 = "0.10"